--- a/semaine02/code-depart/3-typographie-adaptative/3b-typo-fluide.html
+++ b/semaine02/code-depart/3-typographie-adaptative/3b-typo-fluide.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>03b - Typographie fluide - Approche 2</title>
+	<title>3b - Typographie fluide - Approche 2</title>
 
 	<style>
 		/* Normalisation supplémentaire 
@@ -29,10 +29,11 @@
 				les valeurs min, calcul et max SONT à ajuster et à valider pour chaque projet
 			*/
 
-
 		}
 
-		body {}
+		body {
+			
+		}
 
 		p {
 			margin-top: 2vh;
