--- a/semaine02/code-depart/4-images-adaptatives/4b-images-selection-fichier.html
+++ b/semaine02/code-depart/4-images-adaptatives/4b-images-selection-fichier.html
@@ -88,7 +88,6 @@
 			margin-bottom: 10px;
 		}
 
-
 		section .info h4 {
 			font-size: 1rem;
 			line-height: 1.25;
@@ -137,10 +136,12 @@
 					(dans cet exemple, des images recadrées) pour différentes 
 					résolutions d'écran.
 					Utiliser les éléments PICTURE/SOURCE/IMG avec des contraintes
-					média appropriées.
+					média appropriées et l'attribut SRCSET.
 				-->
-				<img src="notre-dame-des-7-douleurs/notre-dame-des-7-douleurs_mobile.jpg"
-					alt="Paysage de Notre-Dame-des-Septs-Douleurs">
+				<img 
+					src="notre-dame-des-7-douleurs/notre-dame-des-7-douleurs_mobile.jpg"
+					alt="Paysage de Notre-Dame-des-Septs-Douleurs"
+				/>
 			</section>
 			</section>
 	</div>
