Semaine 4 - Séance 2 : complet

--- a/semaine04/code-fin/3-icones-google/3-icones-google.html
+++ b/semaine04/code-fin/3-icones-google/3-icones-google.html
@@ -11,7 +11,6 @@
 	<!-- Intégration des polices d'icônes Google -->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-
 	<style>
 		/* Normalisation supplémentaire
     =============================================== */
@@ -168,6 +167,7 @@
 
 		.description {
 			/*Non affiché sur téléphone*/
+			display: none;
 		}
 
 		/* Styles pour les écrans plus larges
@@ -197,6 +197,7 @@
 
 			.description {
 				/*Affichage des descriptions*/
+				display: block;
 			}
 		}
 
@@ -221,7 +222,9 @@
 				height: 40vh;
 			}
 
-			.material-icons {}
+			.material-icons {
+				font-size: 3rem;
+			}
 		}
 	</style>
 </head>
