--- a/semaine05/code-fin/2-menu-adaptatif-exemples/2f-menu-par-opacite.html
+++ b/semaine05/code-fin/2-menu-adaptatif-exemples/2f-menu-par-opacite.html
@@ -47,8 +47,6 @@
                 /*Conteneur flex en colonne*/
                 display: flex;
                 flex-direction: column;
-
-                /*IMPORTANT - Empêcher que le contenu attrape les clics de souris...*/
             }
 
             section {
@@ -119,15 +117,36 @@
                 flex-direction: column;
                 justify-content: center;
 
+                /* Ne reçoit pas les événements du "pointeur" (souris, toucher, stylet) */
+                pointer-events: none;
+
                 /*Au démarrage on met complètement transparent*/
+                opacity: 0;
 
                 /*Effet de transition*/
+                transition: opacity 300ms;
             }
 
             /*On met tous les boutons du menu complètement à gauche*/
-
             .menu a {
+                translate: -100%;
+
                 /*Effet de transition*/
+                transition: translate 0.5s;
+            }
+
+            /* Ajouter un délai aux transitions des différents éléments cliquables de la navigation */
+            .menu a:nth-child(2) {
+                transition-delay: 300ms;
+            }
+            .menu a:nth-child(3) {
+                transition-delay: 600ms;
+            }
+            .menu a:nth-child(4) {
+                transition-delay: 900ms;
+            }
+            .menu a:nth-child(5) {
+                transition-delay: 1200ms;
             }
 
             .bouton-burger {
@@ -165,13 +184,16 @@
             }
 
             /*
-            On met le menu opaque
-        */
+                On met le menu opaque
+            */
             #cc-pour-bouton-burger:checked ~ .barre-menu > .menu {
+                opacity: 1;
+                pointer-events: initial;
             }
 
-            /*Arrivée des différents boutons avec un délai*/
+            /* Remettre les éléments cliquables de la navigation dans leurs positions initialess */
             #cc-pour-bouton-burger:checked ~ .barre-menu > .menu a {
+                translate: 0;
             }
 
             #cc-pour-bouton-burger {
@@ -249,6 +271,7 @@
                 </ul>
 
                 <h3>Le principe général est celui-ci :</h3>
+                <a href="http://www.lapresse.ca">La Presse</a>
                 <ul>
                     <li>
                         &lt;body&gt; est le flex-container principal <strong>en colonne</strong> et ses deux enfants directs sont les deux
